@@ -34,33 +34,33 @@ or the #openvswitch IRC channel.
 Release Strategy
 ----------------
 
-Open vSwitch feature development takes place on the "master" branch.
-Ordinarily, new features are rebased against master and applied directly.  For
+Open vSwitch feature development takes place on the "main" branch.
+Ordinarily, new features are rebased against main and applied directly.  For
 features that take significant development, sometimes it is more appropriate to
-merge a separate branch into master; please discuss this on ovs-dev in advance.
+merge a separate branch into main; please discuss this on ovs-dev in advance.
 
 The process of making a release has the following stages.  See `Release
 Scheduling`_ for the timing of each stage:
 
-1. "Soft freeze" of the master branch.
+1. "Soft freeze" of the main branch.
 
    During the freeze, we ask committers to refrain from applying patches that
    add new features unless those patches were already being publicly discussed
    and reviewed before the freeze began.  Bug fixes are welcome at any time.
    Please propose and discuss exceptions on ovs-dev.
  
-2. Fork a release branch from master, named for the expected release number,
+2. Fork a release branch from main, named for the expected release number,
    e.g. "branch-2.3" for the branch that will yield Open vSwitch 2.3.x.
 
    Release branches are intended for testing and stabilization.  At this stage
    and in later stages, they should receive only bug fixes, not new features.
    Bug fixes applied to release branches should be backports of corresponding
-   bug fixes to the master branch, except for bugs present only on release
+   bug fixes to the main branch, except for bugs present only on release
    branches (which are rare in practice).
 
    At this stage, sometimes there can be exceptions to the rule that a release
    branch receives only bug fixes.  Like bug fixes, new features on release
-   branches should be backports of the corresponding commits on the master
+   branches should be backports of the corresponding commits on the main
    branch.  Features to be added to release branches should be limited in scope
    and risk and discussed on ovs-dev before creating the branch.
 
@@ -125,10 +125,10 @@ intermediate branches).
 Release Numbering
 -----------------
 
-The version number on master should normally end in .90.  This indicates that
+The version number on main should normally end in .90.  This indicates that
 the Open vSwitch version is "almost" the next version to branch.
 
-Forking master into branch-x.y requires two commits to master.  The first is
+Forking main into branch-x.y requires two commits to main.  The first is
 titled "Prepare for x.y.0" and increments the version number to x.y.  This is
 the initial commit on branch-x.y.  The second is titled "Prepare for post-x.y.0
 (x.y.90)" and increments the version number to x.y.90.
@@ -146,23 +146,23 @@ Release Scheduling
 Open vSwitch makes releases at the following six-month cadence.  All dates are
 approximate:
 
-+---------------+----------------+--------------------------------------+
-| Time (months) | Dates          | Stage                                |
-+---------------+----------------+--------------------------------------+
-| T             | Mar 1, Sep 1   | Begin x.y release cycle              |
-+---------------+----------------+--------------------------------------+
-| T + 4         | Jul 1, Jan 1   | "Soft freeze" master for x.y release |
-+---------------+----------------+--------------------------------------+
-| T + 4.5       | Jul 15, Jan 15 | Fork branch-x.y from master          |
-+---------------+----------------+--------------------------------------+
-| T + 5.5       | Aug 15, Feb 15 | Release version x.y.0                |
-+---------------+----------------+--------------------------------------+
++---------------+----------------+------------------------------------+
+| Time (months) | Dates          | Stage                              |
++---------------+----------------+------------------------------------+
+| T             | Mar 1, Sep 1   | Begin x.y release cycle            |
++---------------+----------------+------------------------------------+
+| T + 4         | Jul 1, Jan 1   | "Soft freeze" main for x.y release |
++---------------+----------------+------------------------------------+
+| T + 4.5       | Jul 15, Jan 15 | Fork branch-x.y from main          |
++---------------+----------------+------------------------------------+
+| T + 5.5       | Aug 15, Feb 15 | Release version x.y.0              |
++---------------+----------------+------------------------------------+
 
 How to Branch
 -------------
 
-To branch "master" for the eventual release of OVS version x.y.0,
-prepare two patches against master:
+To branch "main" for the eventual release of OVS version x.y.0,
+prepare two patches against main:
 
 1. "Prepare for x.y.0." following the model of commit 836d1973c56e
    ("Prepare for 2.11.0.").
@@ -172,12 +172,12 @@ prepare two patches against master:
 
 Post both patches to ovs-dev.  Get them reviewed in the usual way.
 
-Apply both patches to master, and create branch-x.y by pushing only
+Apply both patches to main, and create branch-x.y by pushing only
 the first patch.  The following command illustrates how to do both of
 these at once assuming the local repository HEAD points to the
 "Prepare for post-x.y.0" commit:
 
-        git push origin HEAD:master HEAD^:refs/heads/branch-x.y
+        git push origin HEAD:main HEAD^:refs/heads/branch-x.y
 
 Branching should be announced on ovs-dev.
 
@@ -200,7 +200,7 @@ Follow these steps to release version x.y.z of OVS from branch-x.y.
 
 4. Apply the patches to branch-x.y.
 
-5. If z = 0, apply the first patch (only) to master.
+5. If z = 0, apply the first patch (only) to main.
 
 6. Sign a tag vx.y.z "Open vSwitch version x.y.z" and push it to the
    repo.
