@@ -211,7 +211,7 @@ implemented.  Refer to `README.RHEL.rst`__ in the source tree or
 /usr/share/doc/openvswitch/README.RHEL.rst in the installed openvswitch package
 for details.
 
-__ https://github.com/openvswitch/ovs/blob/master/rhel/README.RHEL.rst
+__ https://github.com/openvswitch/ovs/blob/main/rhel/README.RHEL.rst
 
 Reporting Bugs
 --------------
